--- a/demo/two.html
+++ b/demo/two.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>svg arc</title>
+		<title>nipplejs good demo</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 		<style>
@@ -12,9 +12,10 @@
 		</style>
 	</head>
 
+
 	<body>
 	<div >
-		<div id="panzoom" style="position: absolute; width: 155px; height: 100px; right: 10px; border-radius: 5px; top: 379px; display: inline; background-color: rgb(255, 255, 255);">
+		<div id="panzoom" style="position: absolute; width: 155px; height: 100px; left: 10px; border-radius: 5px; top: 10px; display: inline; background-color: rgb(255, 255, 255);">
 			<div id="nippleZoomDiv" style="position: absolute; width: 70px; height: 100px; left: 0px; background-image: url(nippleZoom.png); background-size: 80%; background-repeat: no-repeat; background-position: 7px 22px; touch-action: none;">
 				<div class="nipple collection_0" id="nipple_0_0" style="position: absolute; opacity: 0.5; display: block; z-index: 999; transition: opacity 250ms; top: 50px; left: 35px;">
 					<div class="back" style="position: absolute; display: block; width: 60px; height: 60px; margin-left: -30px; margin-top: -30px; background: black; opacity: 0.5; border-radius: 50%;"></div>
@@ -31,6 +32,7 @@
 	</div>
 	<script type="text/javascript" src="nipplejs.js"></script>
 	<script>
+		// 别人的效果
 	    var panzoom = document.getElementById("panzoom");
 		var nipplePan = document.getElementById("nipplePanDiv");
 		var nippleZoom = document.getElementById("nippleZoomDiv");
@@ -97,8 +99,8 @@
 				directionZoom = "up"
 			}).on("plain:down", function(e, t) {
 				directionZoom = "down"
-			}),
-		}
+			})
+		};
 		bindNipple();
 	</script>
 	</body>
