add signal to render

--- a/texture3d/texture_2darray.html
+++ b/texture3d/texture_2darray.html
@@ -70,7 +70,8 @@ void main()
             if (log) {
                 console.log(log);
             }
-            return program;
+            console.log(program);
+            return program;            
         }
 
 
