--- a/texture3d/volume.html
+++ b/texture3d/volume.html
@@ -4,15 +4,14 @@
 <meta charset="UTF-8">
 <script id="vs" type="x-shader/x-vertex">
 #version 300 es
-
 precision highp float;
 precision highp int;
 
-uniform mat4 umv;
+uniform mat4 umvp;
 layout(location = 0) in vec3 position;
 void main()
 {
-    gl_Position = umv * vec4(position, 1.0);
+    gl_Position = umvp * vec4(position, 1.0);
 }
 </script>
 <script id="fs" type="x-shader/x-fragment">
@@ -21,6 +20,7 @@ precision highp float;
 precision highp int;
 precision highp sampler2DArray;
 
+out vec4 color;
 const int maxSamples = 256;
 
 const vec3 uBBMin = vec3(0, 0, 0);
@@ -31,7 +31,7 @@ const float uContrast = 1.0;
 const float uSaturation = 0.0;
 const float uPower = 1.0;
 
-const int uSamples = 1024;
+const int uSamples = 256;
 const float uDensityFactor = 5.0;
 const float uIsoValue = 0.45;
 const vec4 uIsoColour = vec4(1.0, 1.0, 0.8, 1.0);
@@ -42,16 +42,17 @@ const vec2 uDenMinMax = vec2(0.0, 1.0);
 
 uniform sampler2DArray uvolume;
 
-uniform mat4 umv; // modelview matrix 
-uniform mat4 uproject; // projection matrix 
-uniform mat4 uiproject; // invert projection matrix 
-uniform mat4 unormal; // normal matrix 
+uniform mat4 umv; // model view
+uniform mat4 uproject; // model view projection   
+uniform mat4 uiproject; // invert projection
+uniform mat4 unormal; // normal 
 uniform vec4 uvp; // viewport
-uniform vec3 uResolution; 
+uniform vec3 uresolution; // width,height,depth 
 
 float tex3D(vec3 pos) {
-    vec3 v = texture(uvolume, pos).xyz;
-    return dot(v, v);
+    //vec3 v = texture(uvolume, pos).xyz;
+    //return dot(v, v);
+    return texture(uvolume, pos).x;
 }
 
 // light moves with camera
@@ -102,7 +103,6 @@ vec2 rayIntersectBox(vec3 rayDirection, vec3 rayOrigin) {
     float front = max(max(imin.x, 0.0), max(imin.y, imin.z));
     return vec2(back, front);
 }
-out vec4 color;
 
 void main()
 {
@@ -142,7 +142,7 @@ void main()
     float T = 1.0;
     vec3 colour = vec3(0.0);
     bool inside = false;
-    vec3 shift = 1.0 / uResolution;
+    vec3 shift = uIsoSmooth / uresolution;
     // number of samples to take along this ray before we pass out back of volume 
     float travel = distance(rayStop, rayStart) / stepSize;
     int samples = int(ceil(travel));
@@ -182,6 +182,7 @@ void main()
                 if (uIsoWalls > 0 || all(greaterThanEqual(pos, uBBMin)) && all(lessThanEqual(pos, uBBMax))) {
                     vec4 value = vec4(uIsoColour.rgb, 1.0);
                     vec3 normal = normalize(mat3(unormal) * isoNormal(pos, shift, density));
+                  
                     vec3 light = value.rgb;
                     lighting(pos, normal, light);
                     // front-to-back blend equation 
@@ -245,7 +246,6 @@ layout(location = 1) in vec4 aVertexColour;
 
 uniform mat4 umv;
 uniform mat4 uproject;
-
 uniform vec4 uColour;
 uniform float uAlpha;
 
@@ -253,8 +253,7 @@ out vec4 vColour;
 
 void main(void)
 {
-    vec4 mvPosition = umv * vec4(aVertexPosition, 1.0);
-    gl_Position = uproject * mvPosition;
+    gl_Position = uproject * umv * vec4(aVertexPosition, 1.0);
     vec4 colour = aVertexColour;
     float alpha = 1.0;
     if (uColour.a > 0.01) colour = uColour;
@@ -311,12 +310,12 @@ void main(void)
             loadtex: new signals.Signal()
         }
         let canvas = document.getElementById('demo');
-        // let canvasWidth = 800;
-        // let canvasHeight = 600;
-        // canvas.width = canvasWidth;
-        // canvas.height = canvasHeight;
-        // canvas.setAttribute("width", canvasWidth);
-        // canvas.setAttribute("Height", canvasHeight);
+        let canvasWidth = 600;
+        let canvasHeight = 600;
+        canvas.width = canvasWidth;
+        canvas.height = canvasHeight;
+        canvas.setAttribute("width", canvasWidth);
+        canvas.setAttribute("Height", canvasHeight);
         let gl = canvas.getContext( 'webgl2', { antialias: true } )
         if( gl == null ) { alert( 'requires webgl2 support!' ) }
 
@@ -329,7 +328,6 @@ void main(void)
             slicex: slicex, 
             slicey: slicey,
         });
-        var glsl = render.glsl;
         myevent.loadtex.add(work_render);
 
         if (no_def) {
