make work better, but algorithm still not good

--- a/texture3d/volume5.html
+++ b/texture3d/volume5.html
@@ -20,8 +20,8 @@ void main()
 #version 300 es
 precision highp float;
 precision highp int;
-//precision highp sampler2DArray;
-precision highp sampler3D;
+precision highp sampler2DArray;
+//precision highp sampler3D;
 
 out vec4 FragColor;
 in vec4 vPosition;
@@ -31,8 +31,8 @@ const vec3 LightPosition = vec3(0.25, 1.0, 3.0);
 const vec3 LightIntensity = vec3(15.0);
 const float Absorption = 1.0;
 
-uniform sampler3D uvolume;
-//uniform sampler2DArray uvolume;
+//uniform sampler3D uvolume;
+uniform sampler2DArray uvolume;
 uniform mat4 umv;
 uniform float FocalLength;
 uniform vec2 WindowSize;
@@ -96,8 +96,7 @@ void main()
 
     for (int i=0; i < numSamples && travel > 0.0; ++i, pos += step, travel -= stepSize) {
         
-        // lighting and absorption stuff here
-        
+        // lighting and absorption stuff here        
         float density = texture(uvolume, pos).x * densityFactor;
         if (density <= 0.0);
             continue;
@@ -182,7 +181,7 @@ void main(void)
 <script src="./gl-matrix.js"></script>
 <script src="./signals.js"></script>
 <script src="./perlin.js"></script>
-<script src="./auxiliary4.js"></script>
+<script src="./auxiliary5.js"></script>
 </head>
 <body>
     <canvas id="demo" ></canvas>
