make sharevol for alonely, to anlyise the principle

--- a/sharevol/index.html
+++ b/sharevol/index.html
@@ -4,9 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
 <title>WebGL Volume Viewer</title>
-<script type="text/javascript" src="./dat.gui.js"></script>
 <script type="text/javascript" src="./gl-matrix.js"></script>
-<script type="text/javascript" src="./sharevol.js"></script>
+<script type="text/javascript" src="./dat.gui.js"></script>
+<script type="text/javascript" src="./OK.js"></script>
+<script type="text/javascript" src="./volume.js"></script>
+<script type="text/javascript" src="./slicer.js"></script>
+<script type="text/javascript" src="./main.js"></script>
 
 <script id="volume-vs" type="x-shader/x-vertex">
 precision highp float;
