--- a/sharevol/index.html
+++ b/sharevol/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
 <title>WebGL Volume Viewer</title>
-<script type="text/javascript" src="./gl-matrix.js"></script>
-<script type="text/javascript" src="./dat.gui.js"></script>
+<script type="text/javascript" src="./../lib/gl-matrix.1.3.7.js"></script>
+<script type="text/javascript" src="./../lib/dat.gui.js"></script>
 <script type="text/javascript" src="./OK.js"></script>
 <script type="text/javascript" src="./loadstl.js"></script>
 <script type="text/javascript" src="./volume.js"></script>
