--- a/texture3d/3dnoise/3dnoise.html
+++ b/texture3d/3dnoise/3dnoise.html
@@ -89,10 +89,10 @@ void main()
     float T = 1.0;
     vec3 Lo = vec3(0.0);
 
-    FragColor = texture(uvolume, pos);
-    if (FragColor.x > 0.0) FragColor.a = 1.0;
-    else FragColor.a = 0.0;
-    return;
+    //FragColor = texture(uvolume, pos);
+    //if (FragColor.x > 0.0) FragColor.a = 1.0;
+    //else FragColor.a = 0.0;
+    //return;
 
     for (int i=0; i < numSamples && travel > 0.0; ++i, pos += step, travel -= stepSize) {
         
@@ -121,9 +121,13 @@ void main()
         Lo += Li * T * density * stepSize;
     }
 
-    FragColor.rgb = Lo;
+    //FragColor.rgb = Lo;
     //FragColor.rgba = vec3(255, 0, 0, 1.0-T);
-    FragColor.a = 1.0 - T;
+    //FragColor.a = 1.0 - T;
+    if (T > 0.95)
+        FragColor.rgba = vec4(255, 0, 0, 1.0);
+    else 
+        FragColor.rgba = vec4(0, 255, 0, 1.0);
 }
 </script>
 <script id="line-vs" type="x-shader/x-vertex">
@@ -179,9 +183,9 @@ void main(void)
         border: 1px solid green;
     }    
 </style>
-<script src="./../gl-matrix.js"></script>
-<script src="./../signals.js"></script>
-<script src="./../perlin.js"></script>
+<script src="./../../lib/gl-matrix.2.6.1.js"></script>
+<script src="./../../lib/signals.js"></script>
+<script src="./../../lib/perlin.js"></script>
 <script src="./../common/mqShader.js"></script>
 <script src="./../common/mqMath.js"></script>
 <script src="./mqRender.js"></script>
