--- a/texture3d/3dnoise/3dnoise.html
+++ b/texture3d/3dnoise/3dnoise.html
@@ -121,13 +121,13 @@ void main()
         Lo += Li * T * density * stepSize;
     }
 
-    //FragColor.rgb = Lo;
-    //FragColor.rgba = vec3(255, 0, 0, 1.0-T);
-    //FragColor.a = 1.0 - T;
-    if (T > 0.95)
-        FragColor.rgba = vec4(255, 0, 0, 1.0);
-    else 
-        FragColor.rgba = vec4(0, 255, 0, 1.0);
+    FragColor.rgb = Lo;
+    FragColor.rgba = vec3(255, 0, 0, 1.0-T);
+    FragColor.a = 1.0 - T;
+    //if (T > 0.95)
+    //    FragColor.rgba = vec4(255, 0, 0, 1.0);
+    //else 
+    //    FragColor.rgba = vec4(0, 255, 0, 1.0);
 }
 </script>
 <script id="line-vs" type="x-shader/x-vertex">
@@ -186,8 +186,8 @@ void main(void)
 <script src="./../../lib/gl-matrix.2.6.1.js"></script>
 <script src="./../../lib/signals.js"></script>
 <script src="./../../lib/perlin.js"></script>
-<script src="./../common/mqShader.js"></script>
-<script src="./../common/mqMath.js"></script>
+<script src="./../../lib/mqShader.js"></script>
+<script src="./../../lib/mqMath.js"></script>
 <script src="./mqRender.js"></script>
 </head>
 <body>
@@ -239,12 +239,12 @@ void main(void)
         myevent.loadtex.add(work_render);
 
         if (no_def) {
-            loadImage('/texture3d/test272.jpeg', function(img) {
+            loadImage('/resource/272.jpeg', function(img) {
                 render.loadTextureArray(img, width, slicex, slicey);
                 myevent.loadtex.dispatch(slicex * slicey);
             });
         } else {
-            loadImage('/texture3d/data.jpg', function(img) {
+            loadImage('/resource/data.jpg', function(img) {
                 render.loadTextureArray(img, width, slicex, slicey);
                 myevent.loadtex.dispatch(slicex * slicey);
             });
@@ -262,8 +262,8 @@ void main(void)
                 render.getScreen('demo2');                
                 setTimeout( function(){
                     requestAnimationFrame(anonymousRender);
-                    //render.rotateX(degree);
-                    //render.rotateY(degree);
+                    render.rotateX(degree);
+                    render.rotateY(degree);
                     //render.rotateZ(degree);
                     degree++;
                     if (degree > 360) degree = 0;
