--- a/texture3d/volume2.html
+++ b/texture3d/volume2.html
@@ -51,8 +51,8 @@ void main(void)
         border: 1px solid red;
     }    
 </style>
-<script src="./gl-matrix.js"></script>
-<script src="./signals.js"></script>
+<script src="./../lib/gl-matrix.2.6.1.js"></script>
+<script src="./../lib/signals.js"></script>
 <script src="./auxiliary2.js"></script>
 </head>
 <body>
