--- a/sharevol/index.html
+++ b/sharevol/index.html
@@ -79,9 +79,6 @@ uniform int uFilter;
 uniform vec2 uRange;
 uniform vec2 uDenMinMax;
 
-//#define tex3D(pos) interpolate_tricubic_fast(pos)
-//#define tex3D(pos) texture3Dfrom2D(pos).x
-
 vec2 islices = vec2(1.0 / slices.x, 1.0 / slices.y); //
 // the 2d texture contain3 3d data, so need transform to get data 
 vec4 texture3Dfrom2D(vec3 pos)
@@ -193,14 +190,17 @@ void main()
     // the z value will be written to the depth buffer if gl_FragDepth is not written to 
     // 
     vec4 ndcPos;
-    ndcPos.xy = ((2.0 * gl_FragCoord.xy) - (2.0 * uViewport.xy)) / (uViewport.zw) - 1.0;
-    // 
+    // make ndcPos.xy in [-1,1]
+    ndcPos.xy = ((2.0 * gl_FragCoord.xy) - (2.0 * uViewport.xy)) / (uViewport.zw) - 1.0; 
+    // gl_DepthRange { float near; float far; float diff;}
     ndcPos.z = (2.0 * gl_FragCoord.z - gl_DepthRange.near - gl_DepthRange.far) /
-               (gl_DepthRange.far - gl_DepthRange.near);
+               //(gl_DepthRange.far - gl_DepthRange.near);
+               gl_DepthRange.diff;
     ndcPos.w = 1.0;
     vec4 clipPos = ndcPos / gl_FragCoord.w;
     //vec4 eyeSpacePos = uInvPMatrix * clipPos;
-    vec3 rayDirection = normalize((invMVMatrix * uInvPMatrix * clipPos).xyz);
+    // get localSpace, is the ray-direction
+    vec3 rayDirection = normalize((invMVMatrix * uInvPMatrix * clipPos).xyz);    
 
     //Ray origin from the camera position
     vec4 camPos = -vec4(uMVMatrix[3]);  //4th column of modelview
@@ -231,24 +231,18 @@ void main()
     int samples = int(ceil(travel));
     float range = uRange.y - uRange.x;
     if (range <= 0.0) range = 1.0;
-    //Scale isoValue
+    //Scale isoValue, the equal density surface value,
     float isoValue = uRange.x + uIsoValue * range;
   
     //Raymarch, front to back
     for (int i=0; i < maxSamples; ++i)
     {
       //Render samples until we pass out back of cube or fully opaque
-#ifndef IE11
       if (i == samples || T < 0.01) break;
-#else
-      //This is slower but allows IE 11 to render, break on non-uniform condition causes it to fail
-      if (i == uSamples) break;
-      if (all(greaterThanEqual(pos, uBBMin)) && all(lessThanEqual(pos, uBBMax)))
-#endif
       {
-        //Get density 
+        //Get density, because texture is luminance
         float density = tex3D(pos);
-
+        
 #define ISOSURFACE
 #ifdef ISOSURFACE
         //Passed through isosurface?
