--- a/sharevol/index.html
+++ b/sharevol/index.html
@@ -82,12 +82,17 @@ vec2 islices = vec2(1.0 / slices.x, 1.0 / slices.y); //
 // the 2d texture contain3 3d data, so need transform to get data 
 vec4 texture3Dfrom2D(vec3 pos)
 {
+  //position in xyz 
   //Get z slice index and position between two slices
-  float Z = pos.z * slices.x * slices.y;
+  //float Z = pos.z * slices.x * slices.y;
+  float Z = pos.z * uResolution.z;
   int slice = int(Z); //Index of first slice
 
   //X & Y coords of sample scaled to slice size
-  vec2 sampleOffset = pos.xy * islices;
+  //vec2 sampleOffset = pos.xy * islices;
+  // the big 2d texture to single 2d texture coordinate
+  vec2 sampleOffset = pos.xy / slices;
+  
   //Offsets in 2D texture of given slice indices
   //(add offsets to scaled position within slice to get sample positions)
   float A = float(slice) * islices.x;
@@ -248,6 +253,7 @@ void main()
         
 #define ISOSURFACE
 #ifdef ISOSURFACE
+        // the voxel are not drawn which that less than constant value(iosValue)
         //Passed through isosurface?
         if (isoValue > uRange.x && ((!inside && density >= isoValue) || (inside && density < isoValue)))
         {
@@ -257,7 +263,7 @@ void main()
           float exact;
           float a = intersection.y + (float(i)*stepSize);
           float b = a - stepSize;
-          for (int j = 0; j < 5; j++)
+          for (int j = 0; j < 8; j++)
           {
             exact = (b + a) * 0.5;
             pos = rayDirection * exact + rayOrigin;
@@ -286,7 +292,7 @@ void main()
         }
 #endif
 
-        if (uDensityFactor > 0.0)
+        if (uDensityFactor > 0.0 && false)
         {
           //Normalise the density over provided range
           density = (density - uRange.x) / range;
@@ -320,6 +326,7 @@ void main()
     }
 
     //Apply brightness, saturation & contrast
+    /*
     colour += uBrightness;
     const vec3 LumCoeff = vec3(0.2125, 0.7154, 0.0721);
     vec3 AvgLumin = vec3(0.5, 0.5, 0.5);
@@ -328,8 +335,8 @@ void main()
     colour = mix(AvgLumin, colour, uContrast);
 
     if (T > 0.95) discard;
-    gl_FragColor = vec4(colour, 1.0 - T);
-#define WRITE_DEPTH
+*/    gl_FragColor = vec4(colour, 1.0 - T);
+//#define WRITE_DEPTH
 #ifdef WRITE_DEPTH
     /* Write the depth !Not supported in WebGL without extension */
     vec4 clip_space_pos = uPMatrix * uMVMatrix * vec4(rayStart, 1.0);
