--- a/texture3d/2darray/2darray.html
+++ b/texture3d/2darray/2darray.html
@@ -8,11 +8,10 @@ precision highp float;
 precision highp int;
 
 layout(location = 0) in vec3 position;
-uniform mat4 umv;
 out vec4 vPosition;
 void main()
 {
-    gl_Position = umv * vec4(position, 1.0);
+    gl_Position = vec4(position, 1.0);
     vPosition = gl_Position;
 }
 </script>
@@ -21,7 +20,6 @@ void main()
 precision highp float;
 precision highp int;
 precision highp sampler2DArray;
-//precision highp sampler3D;
 
 out vec4 FragColor;
 in vec4 vPosition;
@@ -33,7 +31,6 @@ const float Absorption = 1.0;
 const vec3 uBBMin = vec3(-1.0);
 const vec3 uBBMax = vec3(1.0);
 
-//uniform sampler3D uvolume;
 uniform sampler2DArray uvolume;
 uniform mat4 umv;
 uniform float FocalLength;
@@ -58,17 +55,28 @@ vec2 rayIntersectBox(vec3 rDir, vec3 rOrigin)
     return vec2(back, front);
 }
 
+mat4 transpose2(in mat4 m)
+{
+  return mat4(
+              vec4(m[0].x, m[1].x, m[2].x, m[3].x),
+              vec4(m[0].y, m[1].y, m[2].y, m[3].y),
+              vec4(m[0].z, m[1].z, m[2].z, m[3].z),
+              vec4(m[0].w, m[1].w, m[2].w, m[3].w)
+             );
+}
+
 void main()
 {
+    mat4 invMVMatrix = transpose(umv);
     vec4 ndcPos;
     ndcPos.xy = ((2.0 * gl_FragCoord.xy) - (2.0 * uViewport.xy)) / (uViewport.zw) - 1.0;
     ndcPos.z = (2.0 * gl_FragCoord.z - gl_DepthRange.diff) / gl_DepthRange.diff;
     ndcPos.w = 1.0;
     vec4 clipPos = ndcPos / gl_FragCoord.w;
-    vec3 rayDirection = normalize((transpose(umv) * clipPos).xyz);
+    vec3 rayDirection = normalize((invMVMatrix * clipPos).xyz);
     vec4 camPos = -vec4(umv[3]);
     // project matrix is identify, invert project matrix is identify
-    vec3 rayOrigin = (transpose(umv) * camPos).xyz;
+    vec3 rayOrigin = (invMVMatrix * camPos).xyz;
 
     float stepSize = 1.732 / float(256);
     
@@ -89,6 +97,10 @@ void main()
     float travel = distance(rayStop, rayStart);
     float T = 1.0;
     vec3 Lo = vec3(0.0);
+
+    float volx = texture(uvolume, pos).x;
+    FragColor = vec4(volx, volx, 1.0, 0.5);
+    return;
 
     for (int i=0; i < numSamples && travel > 0.0; ++i, pos += step, travel -= stepSize) {
         
@@ -198,7 +210,7 @@ void main(void)
         let def_depth = 256;
         let def_slicex = 16;
         let def_slicey = 16;
-        let no_def = true;
+        let no_def = false;
         let width = no_def ? 400 : def_width;
         let height = no_def ? 400 : def_height;
         let depth = no_def ? 272 : def_depth;
@@ -257,8 +269,8 @@ void main(void)
                 render.getScreen('demo2');                
                 setTimeout( function(){
                     requestAnimationFrame(anonymousRender);
-                    render.rotateX(degree);
-                    render.rotateY(degree);
+                    //render.rotateX(degree);
+                    //render.rotateY(degree);
                     //render.rotateZ(degree);
                     degree++;
                     if (degree > 360) degree = 0;
