--- a/demo/obb.html
+++ b/demo/obb.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>plane geometry orhtogonal</title>
+		<title>oriented-bounding-box</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 		<style>
@@ -25,7 +25,7 @@
 	<script>
 	    var canvas = document.getElementById("id_canvas");
 	    canvas.width = window.innerWidth;
-    	    canvas.height = window.innerHeight;	
+    	canvas.height = window.innerHeight;	
 		let scene = new THREE.Scene();
 		scene.background = new THREE.Color(0xf0f0f0);
 		let camera = 
@@ -51,13 +51,14 @@
 		}
 
 		var g = new THREE.CylinderGeometry(5, 5, 32, 32);
-		var m = new THREE.MeshBasicMaterial({color:0xff0000,side:THREE.DoubleSide});
+		var m = new THREE.MeshBasicMaterial({color:0xff0000,transparent:true, opacity:0.5,
+            side:THREE.DoubleSide});
 		var cylinder = new THREE.Mesh(g, m);
 		let axis = new THREE.Vector3(); axis.set(2,-5,3);
 		let mat = new THREE.Matrix4(); mat.makeRotationAxis(axis.normalize(), 0.70722);
-		//cylinder.applyMatrix(mat);
-		//cylinder.updateMatrix();
-		let mat2 = new THREE.Matrix4(); mat2.makeTranslation(5,0,05,0,05,0,05,0,0);
+		cylinder.applyMatrix(mat);
+		cylinder.updateMatrix();
+		let mat2 = new THREE.Matrix4(); mat2.makeTranslation(5,0,0);
 		cylinder.applyMatrix(mat2);
 		cylinder.updateMatrix();		
 		
@@ -66,6 +67,8 @@
 		g.vertices.map(v=>points.push(v.applyMatrix4(cylinder.matrix)));
 		let obb = new mqOBB(points);
 		let box = obb.createBox();
+        box.applyMatrix(cylinder.matrix);
+        box.updateMatrix();
 		box.geometry.computeBoundingBox();
 		let bbx = box.geometry.boundingBox;
 		let center = new THREE.Vector3();
